<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="sasthoseba.com.sasthoseba.fragment.Patient_SignupFragment">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAccount"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20dp"
            tools:textColor="@android:color/holo_green_dark" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/FirstName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColorLink="#009ae7"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:maxLength="15"
            android:inputType="text"/>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:hint="@string/LastName"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:textColorLink="#009ae7"
            android:maxLength="15"
            android:inputType="text"/>

        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:hint="@string/DateOfBirth"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="datetime"
            android:textColorLink="#009ae7"
            android:maxLength="10"/>

        <TextView
            android:id="@+id/radioText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:text="@string/Gender" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_green_dark"
                android:text="@string/Male" />
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_green_dark"
                android:text="@string/Female" />
        </RadioGroup>

        <EditText
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:hint="@string/PhoneNo"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:textColorLink="#009ae7"
            android:inputType="phone"
            android:maxLength="11"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:hint="@string/Email"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:maxLength="30"
            android:textColorLink="#009ae7"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:hint="@string/Password"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="textPassword"
            android:maxLength="40"
            android:textColorLink="#009ae7" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0.5dp"
            android:hint="@string/ConfirmPassword"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="textPassword"
            android:maxLength="40"
            android:textColorLink="#009ae7" />

        <Button
            android:id="@+id/PatientRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
