<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="sasthoseba.com.sasthoseba.fragment.Doctor_LoginFragment">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginTo"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/PhoneNo"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:cursorVisible="true"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:maxLength="11"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="17dp"
            android:text="@string/ForgotPassword"
            android:textAlignment="center"
            android:textSize="16dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
