<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sasthoseba.com.sasthoseba.Patient_Question"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_green_light"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                android:id="@+id/toolbar_title"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/QuesPageTitle"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20dp"
                tools:textColor="@android:color/holo_green_dark" />



            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/androidspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/QuesPageType"
                android:textColorLink="#669900"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:popupBackground="#F5FFFA"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/whatisonyourmind"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/textinputborder"
                android:hint="@string/Question"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:scrollbars="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorLink="#1e4e41"
                >
            </EditText>

            <Button
                android:id="@+id/sendquestion"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/send"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>

